--- a/{{ cookiecutter.project_name }}/requirements.txt
+++ b/{{ cookiecutter.project_name }}/requirements.txt
@@ -6,6 +6,8 @@ cookiecutter
 make
 plotly
 
+python-dotenv>=0.5.1
+
 fastapi[standard]
 email-validator
 passlib[bcrypt]
@@ -17,4 +19,12 @@ uvicorn
 python-multipart
 bcrypt==3.2.0
 
+dagster 
+dagster-webserver 
+
 click
+
+{% if cookiecutter.python_interpreter != 'python3' %}
+# backwards compatibility
+pathlib2
+{% endif %}
