[ADD] dagster working for etl, sphinx doc working, a streamlit app working also

--- a/{{ cookiecutter.project_name }}/requirements.txt
+++ b/{{ cookiecutter.project_name }}/requirements.txt
@@ -24,7 +24,32 @@ dagster-webserver
 
 click
 
+streamlit
+st-pages
+
 {% if cookiecutter.python_interpreter != 'python3' %}
 # backwards compatibility
 pathlib2
 {% endif %}
+
+
+
+furo
+sphinx-book-theme
+sphinx
+sphinx-copybutton
+sphinx-last-updated-by-git
+sphinx-view
+sphinx_inline_tabs
+sphinxcontrib.bibtex
+sphinxcontrib.mermaid
+sphinx-autobuild
+sphinx_git
+sphinx-favicon
+nbsphinx
+pandoc
+wheel
+sphinx-simplepdf
+sphinxcontrib-youtube
+sphinxprettysearchresults
+sphinxcontrib-googleanalytics==0.4
