--- a/{{ cookiecutter.project_name }}/requirements.txt
+++ b/{{ cookiecutter.project_name }}/requirements.txt
@@ -1,13 +1,17 @@
+# basics
 numpy
 pandas
 scikit-learn
 pytest
 cookiecutter
 make
+python-dotenv>=0.5.1
+click
+
+# visualization
 plotly
 
-python-dotenv>=0.5.1
-
+# backend
 fastapi[standard]
 email-validator
 passlib[bcrypt]
@@ -19,13 +23,14 @@ uvicorn
 python-multipart
 bcrypt==3.2.0
 
+# ETL orchestration
 dagster 
 dagster-webserver 
 
-click
-
+# frontend
 streamlit
 st-pages
+
 
 {% if cookiecutter.python_interpreter != 'python3' %}
 # backwards compatibility
@@ -33,7 +38,7 @@ pathlib2
 {% endif %}
 
 
-
+# Documentation sphinx
 furo
 sphinx-book-theme
 sphinx
@@ -53,3 +58,13 @@ sphinx-simplepdf
 sphinxcontrib-youtube
 sphinxprettysearchresults
 sphinxcontrib-googleanalytics==0.4
+
+
+# Data Science
+flaml
+xgboost
+kmodes
+hdbscan
+gower
+autots
+prophet
